fix：scrollbar style when computer mouse plugin

--- a/src/components/scrollbar/horizontal-scrollbar/index.css
+++ b/src/components/scrollbar/horizontal-scrollbar/index.css
@@ -10,3 +10,17 @@
 .horizontal-scrollbar-inner {
   height: 1px;
 }
+
+::-webkit-scrollbar {
+  height: 7px;
+}
+
+::-webkit-scrollbar-track,::-webkit-scrollbar-track-piece{
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(193, 193, 193);
+  border-radius: 7px;
+}
+
